# pylibkarl

./: README.md  pyproject.toml
karl/: inspect.py  pred.py  recurs.py  sugar.py  typing.py  util.py
